# EchoGrid

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: NodeInspector.cpp  NodeInspector.h  NodeTimeline.cpp  NodeTimeline.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Theme.h
design/: echogrid-dashboard-mockup.html  echogrid-modern-mockup.html
tests/: render_ui.cpp  test_formant.cpp  test_reverse.cpp
